fix open navbar height on mobile

--- a/CSS/navbar.css
+++ b/CSS/navbar.css
@@ -83,7 +83,7 @@
     height: 0px;
     transition: all 0.2s ease-in;
     overflow-y: hidden;
-    top: 70px;
+    top: 50px;
     left: 0px;
   }
   .nav > .nav-links > a {
@@ -98,7 +98,7 @@
     height: 0px;
   }
   .nav > #nav-check:checked ~ .nav-links {
-    height: 40vh;
+    height: 32vh;
     overflow-y: auto;
   }
 }
